// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price component renders simple product pricing successfully 1`] = `
<body>
  <div>
    <p
      class="mt-0.5 mx-0.5 mb-0 text-sm text-shark group-hover:text-shark-900"
    >
      $20.00
    </p>
  </div>
</body>
`;

exports[`Price component renders simple product pricing successfully 2`] = `
"Snapshot Diff:
- <ProductPrice price=\\"$20.00\\" regularPrice=\\"$20.00\\" type=\\"SIMPLE\\" />
+ <ProductPrice onSale={true} price=\\"$18.99\\" regularPrice=\\"$20.00\\" type=\\"SIMPLE\\" />

  <p
    className=\\"mt-0.5 mx-0.5 mb-0 text-sm text-shark group-hover:text-shark-900\\"
  >
-   $20.00
+   <span
+     className=\\"line-through text-lynch group-hover:text-blue-bayoux\\"
+   >
+     $20.00
+   </span>
+    
+   $18.99
  </p>"
`;

exports[`Price component renders variable product pricing successfully 1`] = `
<body>
  <div>
    <p
      class="mt-0.5 mx-0.5 mb-0 text-sm text-shark group-hover:text-shark-900"
    >
      $15.00-$20.00
    </p>
  </div>
</body>
`;

exports[`Price component renders variable product pricing successfully 2`] = `
"Snapshot Diff:
- <ProductPrice price=\\"$15.00-$20.00\\" regularPrice=\\"$15.00-$20.00\\" type=\\"VARIABLE\\" />
+ <ProductPrice onSale={true} price=\\"$14.99-$18.99\\" regularPrice=\\"$15.00-$20.00\\" type=\\"VARIABLE\\" />

  <p
    className=\\"mt-0.5 mx-0.5 mb-0 text-sm text-shark group-hover:text-shark-900\\"
  >
-   $15.00-$20.00
+   $14.99-$18.99
  </p>"
`;
